// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration with apollo-server correct span nesting 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "finished": true,
          "id": 6,
          "logs": Array [
            Object {
              "result": "\\"1\\"",
            },
          ],
          "name": "one",
          "options": Object {
            "childOf": Object {
              "finish": [Function],
              "id": 5,
              "log": [Function],
              "name": "a",
            },
          },
          "parentId": 5,
        },
        Object {
          "children": Array [],
          "finished": true,
          "id": 7,
          "logs": Array [
            Object {
              "result": "\\"2\\"",
            },
          ],
          "name": "two",
          "options": Object {
            "childOf": Object {
              "finish": [Function],
              "id": 5,
              "log": [Function],
              "name": "a",
            },
          },
          "parentId": 5,
        },
      ],
      "finished": true,
      "id": 5,
      "logs": Array [
        Object {
          "result": "{\\"one\\":\\"1\\",\\"two\\":\\"2\\",\\"three\\":[{\\"four\\":\\"4\\"},{\\"four\\":\\"IV\\"}]}",
        },
      ],
      "name": "a",
      "options": Object {
        "childOf": Object {
          "finish": [Function],
          "id": 4,
          "log": [Function],
          "name": "request",
        },
      },
      "parentId": 4,
    },
  ],
  "finished": true,
  "id": 4,
  "logs": Array [
    Object {
      "queryString": "query {
        a {
          one
          two
        }
      }",
    },
  ],
  "name": "request",
  "options": Object {
    "childOf": undefined,
  },
  "parentId": undefined,
}
`;

exports[`integration with apollo-server does not start a field resolver span if the parent field resolver was not traced 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "finished": true,
          "id": 10,
          "logs": Array [
            Object {
              "result": "\\"4\\"",
            },
          ],
          "name": "four",
          "options": Object {
            "childOf": Object {
              "finish": [Function],
              "id": 9,
              "log": [Function],
              "name": "b",
            },
          },
          "parentId": 9,
        },
      ],
      "finished": true,
      "id": 9,
      "logs": Array [
        Object {
          "result": "{\\"four\\":\\"4\\"}",
        },
      ],
      "name": "b",
      "options": Object {
        "childOf": Object {
          "finish": [Function],
          "id": 8,
          "log": [Function],
          "name": "request",
        },
      },
      "parentId": 8,
    },
  ],
  "finished": true,
  "id": 8,
  "logs": Array [
    Object {
      "queryString": "query {
        a {
          one
          two
        }
        b {
          four
        }
      }",
    },
  ],
  "name": "request",
  "options": Object {
    "childOf": undefined,
  },
  "parentId": undefined,
}
`;
